log/build_2024-04-15_11-33-31/uav_tf2_test/stderr.log
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp: In constructor ‘FrameListener::FrameListener()’:
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:22:5: error: ‘source_frame_1’ was not declared in this scope; did you mean ‘suorce_frame_1’?
   22 |     source_frame_1 = this->declare_parameter<std::string>("source_frame1", "camera");
      |     ^~~~~~~~~~~~~~
      |     suorce_frame_1
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:23:5: error: ‘source_frame_2’ was not declared in this scope; did you mean ‘suorce_frame_2’?
   23 |     source_frame_2 = this->declare_parameter<std::string>("source_frame2", "lidar");
      |     ^~~~~~~~~~~~~~
      |     suorce_frame_2
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp: In member function ‘void FrameListener::on_timer()’:
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:37:33: error: ‘source_frame_1’ was not declared in this scope; did you mean ‘suorce_frame_1’?
   37 |     std::string fromFrameRel1 = source_frame_1.c_str();
      |                                 ^~~~~~~~~~~~~~
      |                                 suorce_frame_1
/home/ccl/ros2_ws/uav_tf2_test/src/tf2_listener.cpp:38:33: error: ‘source_frame_2’ was not declared in this scope; did you mean ‘suorce_frame_2’?
   38 |     std::string fromFrameRel2 = source_frame_2.c_str();
      |                                 ^~~~~~~~~~~~~~
      |                                 suorce_frame_2
make[2]: *** [CMakeFiles/tf2_listener.dir/build.make:63: CMakeFiles/tf2_listener.dir/src/tf2_listener.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:279: CMakeFiles/tf2_listener.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
